youfull/objects/Ineligibility_Reason__c.object
<CustomObject>
    <description>Stores mapping of an Ineligibility Reason code to its description for a given Market in given language</description>
    <fields>
        <fullName>Ineligibility_Code__c</fullName>
        <label>Ineligibility Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ineligibility_Reason_In_Eng__c</fullName>
        <description>Reason in English</description>
        <inlineHelpText>Reason in English</inlineHelpText>
        <label>Ineligibility Reason In Eng</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ineligibility_Reason_Key__c</fullName>
        <description>The field is used by CDW for data import</description>
        <externalId>true</externalId>
        <inlineHelpText>The field is used by CDW for data import</inlineHelpText>
        <label>Ineligibility Reason Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ineligibility_Reason__c</fullName>
        <label>Ineligibility Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LANG_CD__c</fullName>
        <description>Language Code</description>
        <inlineHelpText>Language Code</inlineHelpText>
        <label>LANG_CD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Master-detail lookup to Market</description>
        <inlineHelpText>Master-detail lookup to Market</inlineHelpText>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Ineligibility Reasons</relationshipLabel>
        <relationshipName>Ineligibility_Reasons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Relative order in which the reason will be displayed to users</description>
        <inlineHelpText>Relative order in which the reason will be displayed to users</inlineHelpText>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Desc_In_Eng__c</fullName>
        <description>Short Description of the reason in English</description>
        <inlineHelpText>Short Description of the reason in English</inlineHelpText>
        <label>Short Desc In Eng</label>
        <type>TextArea</type>
    </fields>
    <label>Ineligibility Reason</label>
    <nameField>
        <displayFormat>IR-{0}</displayFormat>
        <label>Ineligibility Reason Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ineligibility Reasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>